package com.example.demo.dto;

public class UserDTO {
    private String username;
    private String contrast;

        public String getUsername(){
            return username;
        }
        public void setUsername(String username){
            this.username=username;
        }
        public  String getContrast(){
            return  contrast;
        }

    public void setContrast(String contrast) {
        this.contrast = contrast;
    }
}
