package com.example.demo.model.customer;

import jakarta.persistence.*;

@Entity
public class Customer {
    @Id
    @GeneratedValue(strategy = GenerationType.IDENTITY, generator = "native")
    @Column(name = "id")
    private Integer id;
    @Column(name = "name")
    private String name;

    public Integer getId(){
        return  id;
    }

    public void setId(Integer id){
        this.id=id;
    }
    public String getName(){
        return name;
    }

    public void setName(String name) {
        this.name = name;
    }
}
